[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/SquareRoom.gd" type="Script" id=1]

[sub_resource type="NavigationMesh" id=12]
vertices = PoolVector3Array( -43.4, 0.4, -49.4, -49.4, 0.4, -49.4, -49.4, 0.4, -43.4, -49.4, 0.4, 43, -49.4, 0.4, 49.3, -43.4, 0.4, 49.3, 49.3, 0.4, -43.4, 49.3, 0.4, -49.4, 43, 0.4, -49.4, 43, 0.4, 49.3, 49.3, 0.4, 49.3, 49.3, 0.4, 43, -37.1, 0.4, -49.4, -43.4, 0.4, -49.4, -49.4, 0.4, -43.4, -49.4, 0.4, -37.1, -49.4, 0.4, 43, -43.4, 0.4, 49.3, -37.1, 0.4, 49.3, -49.4, 0.4, 36.7, 49.3, 0.4, -37.1, 49.3, 0.4, -43.4, 43, 0.4, -49.4, 36.7, 0.4, -49.4, 36.7, 0.4, 49.3, 43, 0.4, 49.3, 49.3, 0.4, 43, -0.199997, 0.4, -49.4, -6.5, 0.4, -49.4, -49.4, 0.4, -6.5, -49.4, 0.4, -0.199997, 18.1, 0.4, 49.3, 49.3, 0.4, 24.4, 49.3, 0.4, 18.1, 12.1, 0.4, 49.3, 49.3, 0.4, -6.5, 49.3, 0.4, -12.5, 12.1, 0.4, -49.4, 5.8, 0.4, -49.4, 36.7, 0.4, 49.3, 49.3, 0.4, 43, 49.3, 0.4, 36.7, 30.4, 0.4, 49.3, -31.1, 0.4, -49.4, -37.1, 0.4, -49.4, -49.4, 0.4, -37.1, -49.4, 0.4, -31.1, -49.4, 0.4, 36.7, -37.1, 0.4, 49.3, -31.1, 0.4, 49.3, -49.4, 0.4, 30.4, 49.3, 0.4, -31.1, 49.3, 0.4, -37.1, 36.7, 0.4, -49.4, 30.4, 0.4, -49.4, -12.5, 0.4, -49.4, -18.8, 0.4, -49.4, -49.4, 0.4, -18.8, -49.4, 0.4, -12.5, -49.4, 0.4, 12.1, -49.4, 0.4, 18.1, -18.8, 0.4, 49.3, -12.5, 0.4, 49.3, -49.4, 0.4, -0.199997, -49.4, 0.4, 5.8, -6.5, 0.4, 49.3, 49.3, 0.4, -18.8, 18.1, 0.4, -49.4, 12.1, 0.4, -49.4, 49.3, 0.4, -12.5, 30.4, 0.4, 49.3, 49.3, 0.4, 36.7, 49.3, 0.4, 30.4, 24.4, 0.4, 49.3, -24.8, 0.4, -49.4, -31.1, 0.4, -49.4, -49.4, 0.4, -31.1, -49.4, 0.4, -24.8, -49.4, 0.4, 24.4, -49.4, 0.4, 30.4, -31.1, 0.4, 49.3, -24.8, 0.4, 49.3, 49.3, 0.4, -31.1, 30.4, 0.4, -49.4, 24.4, 0.4, -49.4, 49.3, 0.4, -24.8, -49.4, 0.4, -0.199997, -6.5, 0.4, 49.3, -0.199997, 0.4, 49.3, 49.3, 0.4, 5.8, 49.3, 0.4, -0.199997, -0.199997, 0.4, -49.4, 5.8, 0.4, 49.3, 49.3, 0.4, 12.1, 49.3, 0.4, 5.8, -0.199997, 0.4, 49.3, 12.1, 0.4, 49.3, 49.3, 0.4, 18.1, 49.3, 0.4, 12.1, 5.8, 0.4, 49.3, 49.3, 0.4, -6.5, 5.8, 0.4, -49.4, -0.199997, 0.4, -49.4, 49.3, 0.4, -0.199997, 24.4, 0.4, 49.3, 49.3, 0.4, 30.4, 49.3, 0.4, 24.4, 18.1, 0.4, 49.3, -18.8, 0.4, -49.4, -24.8, 0.4, -49.4, -49.4, 0.4, -24.8, -49.4, 0.4, -18.8, -49.4, 0.4, 24.4, -24.8, 0.4, 49.3, -18.8, 0.4, 49.3, -49.4, 0.4, 18.1, 49.3, 0.4, -18.8, 49.3, 0.4, -24.8, 24.4, 0.4, -49.4, 18.1, 0.4, -49.4, -6.5, 0.4, -49.4, -12.5, 0.4, -49.4, -49.4, 0.4, -12.5, -49.4, 0.4, -6.5, -49.4, 0.4, 12.1, -12.5, 0.4, 49.3, -6.5, 0.4, 49.3, -49.4, 0.4, 5.8 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 13, 12, 14 ), PoolIntArray( 14, 12, 15 ), PoolIntArray( 17, 16, 18 ), PoolIntArray( 18, 16, 19 ), PoolIntArray( 21, 20, 22 ), PoolIntArray( 22, 20, 23 ), PoolIntArray( 26, 25, 24 ), PoolIntArray( 28, 27, 29 ), PoolIntArray( 29, 27, 30 ), PoolIntArray( 32, 31, 33 ), PoolIntArray( 33, 31, 34 ), PoolIntArray( 36, 35, 37 ), PoolIntArray( 37, 35, 38 ), PoolIntArray( 40, 39, 41 ), PoolIntArray( 41, 39, 42 ), PoolIntArray( 44, 43, 45 ), PoolIntArray( 45, 43, 46 ), PoolIntArray( 48, 47, 49 ), PoolIntArray( 49, 47, 50 ), PoolIntArray( 52, 51, 53 ), PoolIntArray( 53, 51, 54 ), PoolIntArray( 56, 55, 57 ), PoolIntArray( 57, 55, 58 ), PoolIntArray( 60, 59, 61 ), PoolIntArray( 61, 59, 62 ), PoolIntArray( 65, 64, 63 ), PoolIntArray( 67, 66, 68 ), PoolIntArray( 68, 66, 69 ), PoolIntArray( 71, 70, 72 ), PoolIntArray( 72, 70, 73 ), PoolIntArray( 75, 74, 76 ), PoolIntArray( 76, 74, 77 ), PoolIntArray( 79, 78, 80 ), PoolIntArray( 80, 78, 81 ), PoolIntArray( 83, 82, 84 ), PoolIntArray( 84, 82, 85 ), PoolIntArray( 87, 86, 88 ), PoolIntArray( 88, 86, 89 ), PoolIntArray( 89, 86, 90 ), PoolIntArray( 90, 86, 91 ), PoolIntArray( 93, 92, 94 ), PoolIntArray( 94, 92, 95 ), PoolIntArray( 97, 96, 98 ), PoolIntArray( 98, 96, 99 ), PoolIntArray( 101, 100, 102 ), PoolIntArray( 102, 100, 103 ), PoolIntArray( 105, 104, 106 ), PoolIntArray( 106, 104, 107 ), PoolIntArray( 109, 108, 110 ), PoolIntArray( 110, 108, 111 ), PoolIntArray( 113, 112, 114 ), PoolIntArray( 114, 112, 115 ), PoolIntArray( 117, 116, 118 ), PoolIntArray( 118, 116, 119 ), PoolIntArray( 121, 120, 122 ), PoolIntArray( 122, 120, 123 ), PoolIntArray( 125, 124, 126 ), PoolIntArray( 126, 124, 127 ) ]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 50, 1, 50 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.137255, 0.121569, 0.0980392, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 3 )
size = Vector3( 100, 2, 100 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 45, 10, 45 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.219608, 0.14902, 0.105882, 0.0823529 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.188235, 0.0627451, 0.0627451, 1 )

[sub_resource type="PlaneMesh" id=10]
material = SubResource( 11 )
size = Vector2( 4, 20 )

[node name="SquareRoom" type="Room"]
script = ExtResource( 1 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 12 )

[node name="Ground" type="StaticBody" parent="Navigation/NavigationMeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Navigation/NavigationMeshInstance/Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance/Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
shape = SubResource( 4 )

[node name="EastNorthWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 49.5, 10, -29.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="EastWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 49.5, 10, 0 )
visible = false
use_collision = true
collision_layer = 0
collision_mask = 0
width = 20.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="EastSouthWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 49.5, 10, 29.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="EastDoor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0.1, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="SouthEastWall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 29.5, 10, 49.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="SouthWall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 0, 10, 49.5 )
visible = false
use_collision = true
collision_layer = 0
collision_mask = 0
width = 20.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="SouthWestWall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, -29.5, 10, 49.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="SouthDoor" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.1, 48 )
mesh = SubResource( 10 )
material/0 = null

[node name="WestSouthWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -49.5, 10, 29.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="WestWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -49.5, 10, 0 )
visible = false
use_collision = true
collision_layer = 0
collision_mask = 0
width = 20.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="WestNorthWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -49.5, 10, -29.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="WestDoor" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -48, 0.1, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="NorthWestWall" type="CSGBox" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -29.5, 10, -49.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="NorthWall" type="CSGBox" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, -49.5 )
visible = false
use_collision = true
collision_layer = 0
collision_mask = 0
width = 20.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="NorthEastWall" type="CSGBox" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 29.5, 10, -49.5 )
visible = false
use_collision = true
collision_layer = 4
collision_mask = 0
width = 39.0
height = 20.0
depth = 1.0
material = SubResource( 6 )

[node name="NorthDoor" type="MeshInstance" parent="."]
transform = Transform( 1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0, 0.1, -48 )
mesh = SubResource( 10 )
material/0 = null
